// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Portuguese language Empty input 1`] = `
Array [
  Object {
    "id": 30,
    "rating": undefined,
    "title": "Escova de dentes elétrica",
  },
  Object {
    "id": 20,
    "rating": undefined,
    "title": "Cabo Lightning para USB-A",
  },
  Object {
    "id": 40,
    "rating": undefined,
    "title": "Sacos de armazenamento a vácuo",
  },
  Object {
    "id": 10,
    "rating": undefined,
    "title": "Pilhas Alcalinas AA — Embalagem com 12",
  },
]
`;

exports[`Portuguese language Equality 1`] = `
Array [
  Object {
    "id": 30,
    "rating": undefined,
    "title": "[Escova] [de] [dentes] [elétrica]",
  },
  Object {
    "id": 40,
    "rating": undefined,
    "title": "Sacos [de] armazenamento a vácuo",
  },
]
`;

exports[`Portuguese language Normalization 1`] = `
Array [
  Object {
    "id": 30,
    "rating": undefined,
    "title": "Escova de dentes [elétric]a",
  },
]
`;

exports[`Portuguese language Partiles 1`] = `
Array [
  Object {
    "id": 30,
    "rating": undefined,
    "title": "Escova de [de]ntes elétrica",
  },
  Object {
    "id": 40,
    "rating": undefined,
    "title": "Sacos [de] armazenamento a vácuo",
  },
]
`;

exports[`Portuguese language Stemming 1`] = `
Array [
  Object {
    "id": 10,
    "rating": undefined,
    "title": "Pilhas [Alcalin]as AA — Embalagem com 12",
  },
]
`;
